--- a/package.json
+++ b/package.json
@@ -15,13 +15,19 @@
     "@redux-saga/types": "^1.2.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/react-redux": "^7.1.25",
+    "deprecated-react-native-prop-types": "^4.1.0",
+    "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "^13.9.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.7",
     "redux": "^4.2.1",
-    "redux-saga": "^1.2.3"
+    "redux-saga": "^1.2.3",
+    "uninstall": "^0.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -33,10 +39,15 @@
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
-    "eslint": "^8.19.0",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "eslint": "^8.42.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.9",
-    "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
