--- a/package.json
+++ b/package.json
@@ -10,24 +10,33 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/clipboard": "^1.5.1",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@redux-saga/types": "^1.2.1",
     "@reduxjs/toolkit": "^1.9.5",
+    "@twotalltotems/react-native-otp-input": "^1.3.11",
     "@types/react-redux": "^7.1.25",
     "deprecated-react-native-prop-types": "^4.1.0",
     "native-base": "^3.4.28",
+    "otp-generator": "^4.0.1",
     "react": "18.2.0",
+    "react-hook-form": "^7.44.3",
     "react-native": "0.71.8",
+    "react-native-dialog": "^9.3.0",
+    "react-native-get-random-values": "^1.9.0",
+    "react-native-otp-textinput": "^1.0.1",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^13.9.0",
+    "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.7",
     "redux": "^4.2.1",
     "redux-saga": "^1.2.3",
-    "uninstall": "^0.0.0"
+    "uninstall": "^0.0.0",
+    "uniqid": "^5.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
